* Added illegal-access=permit again.